--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/transactions
-REDIS_URL=redis://localhost:6379
+MONGO_URI=mongodb+srv://dhanakshirurshreyas_db_user:Ia5279npxEP2U9ju@webhooks-cluster.68jm67x.mongodb.net/?appName=webhooks-cluster
+REDIS_URL=redis-13891.c275.us-east-1-4.ec2.cloud.redislabs.com:13891
+
+
+
+
