--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "scripts": {
+    "start": "node src/server.js",
+    "worker": "node src/workers/transaction.worker.js"
+  }
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
